Revise subtitle and risk description in index.html
Updated subtitle and risk description for clarity.

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     <div class="cat-icon" style="background:var(--purple-lt);">👩‍🏫</div>
     <div>
       <div class="cat-title">קטגוריה א' – המעבר מ"בעל סמכות הידע" ל"מנחה למידה"</div>
-      <div class="cat-subtitle">כהגדרתה של טלי יניב: מורה-מוסר-ידע לאיש חינוך המלווה, מנחה ומאמן — תהליך 5, שלבים 1–3</div>
+      <div class="cat-subtitle"> מורה-מוסר-ידע לאיש חינוך המלווה, מנחה ומאמן — תהליך 5, שלבים 1–3</div>
     </div>
   </div>
 
@@ -452,7 +452,7 @@
       <div class="rb-col">
         <div class="rb-col-label">📋 תיאור הסיכון</div>
         <div class="process-ref"><strong>מסמך החזון:</strong> "שני רכיבים שאינם מתקיימים בנפרד: מומחה תוכן + מנחה למידה — פרופיל אחד של מורה שלם"</div>
-        <p class="risk-desc">המורים מגיעים עם תפקיד מוגדר של הקנאה פרונטלית — "בעל סמכות הידע". החזון של 720 מחייב פרופיל מורה שלם הפועל בו-זמנית כמומחה דיסציפלינרי וכ"מנחה למידה" (כהגדרת טלי יניב). שינוי זה כרוך בוויתור על שליטה ועל זהות מקצועית מוכרת ועלול לייצר התנגדות פעילה או סמויה.</p>
+        <p class="risk-desc">המורים מגיעים עם תפקיד מוגדר של הקניה פרונטלית — "בעל סמכות הידע". החזון של 720 מחייב פרופיל מורה שלם הפועל בו-זמנית כמומחה דיסציפלינרי וכ"מנחה למידה". שינוי זה כרוך בוויתור על שליטה ועל זהות מקצועית מוכרת ועלול לייצר התנגדות פעילה או סמויה.</p>
       </div>
       <div class="rb-col">
         <div class="rb-col-label">📉 השלכות אפשריות</div>
